fixed button font to appear on Safari/IOS

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -2,7 +2,7 @@
     cursor: pointer;
     height: 60px;
     font-size: 1.75rem;
-    font-family: 'Russo One', sans-serif;
+    font-family: 'Righteous', cursive;
     font-weight: 500;
     border: 1px solid transparent;
     border-radius: 10px;
